# HandwritingExtraction

./: CMakeLists.txt  README.md  main.cpp
